Changelog
===========

0.3.4 (unreleased)
------------------

- Nothing yet.


0.3.3 (2013-07-25)
------------------

- Updated the import-time SVN revision update mechanism in the ``version.py``
  module generated by the ``version_setup_hook`` to avoid running when not in
  a dev version of the package.  This saves time on importing released
  packages when installed on users' systems.

- Added a workaround to a bug on Python 3.3 that could cause stsci.distutils
  to crash during installation.


0.3.2 (2013-03-27)
------------------

- Fixed a bug in the version hook that could occur if the svnversion command
  fails.

- Updated the template for the version.py module generated by the version hook
  so that ``from .version import *`` will work for applications.

- Added a ``__vdate__`` variable in version.py which may contain a release
  date string by specifying a ``vdate`` option in the ``[metadata]`` section
  of setup.cfg.

- Added a ``stsci_distutils_version`` variable in version.py containing the
  version of stsci.distutils used to generate the file--useful primarily for
  debugging purposes.

- Version 0.3.1 added a new zest.releaser hooks to ensure that source
  distributes are created as tar.gz files instead of zip files--this was left
  out of the changelog for 0.3.1.

- The tar.gz zest.releaser hook is updated in 0.3.2 to only run on stsci
  packages.


0.3.1 (2012-06-28)
------------------

- Fixed a bug where console output from svn-related programs was assumed to be
  ascii, leading to possible crashes on non-English systems.


0.3 (2012-02-20)
----------------

- The ``glob_data_files`` hook became a pre-command hook for the install_data
  command instead of being a setup-hook.  This is to support the additional
  functionality of requiring data_files with relative destination paths to be
  install relative to the package's install path (i.e. site-packages).

- Dropped support for and deprecated the easier_install custom command.